# Template-Manager

./: CMakeLists.txt  flake.nix
include/: Logger.hpp  Options.hpp  get_cwd.hpp
src/: Logger.cpp  Options.cpp  get_cwd.cpp  main.cpp  main.cpp.bak
